fix: improviment in CSS page style, icon in footer email, and spacing in 'general'.
Issue #11 (https://github.com/LadybirdBrowser/ladybird.org/issues/11), 3,2,1 topics.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -378,13 +378,6 @@ a {
   gap: 40px;
 }
 
-@media (min-width: 380px) {
-  .footer__content-top {
-    flex-direction: row;
-    gap: 20px;
-  }
-}
-
 .footer__content-bottom {
   display: flex;
   justify-content: space-between;
